# robot_etsy

./: CMakeLists.txt  CMakePresets.json  Doxyfile  proxy_list.txt  vcpkg.json
html/: _downloader_8h_source.html  _h_t_m_l_parser_8h_source.html  _proxy_manager_8h_source.html  _utils_8h_source.html  annotated.html  class_downloader-members.html  class_downloader.html  class_html_parser-members.html  class_html_parser.html  class_proxy_manager-members.html  class_proxy_manager.html  class_utils-members.html  class_utils.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html
html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  searchdata.js
include/: Downloader.h  HTMLParser.h  ProxyManager.h  Utils.h
rtf/: refman.rtf
src/: Downloader.cpp  HTMLParser.cpp  ProxyManager.cpp  main.cpp  test2.cpp
